force-app/main/default/objects/Stripe_FP_Audit__c/Stripe_FP_Audit__c.object-meta.xml
<CustomObject>
    <label>Stripe FP Audit</label>
    <nameField>
        <label>Stripe FP Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe FP Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>