force-app/main/default/objects/Stripe_FP_Audit__c/fields/Linked_Case__c.field-meta.xml
<CustomField>
    <fullName>Linked_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Stripe FP Audits</relationshipLabel>
    <relationshipName>Stripe_FP_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>