force-app/main/default/objects/Stripe_FP_Audit__c/fields/Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Id__c</fullName>
    <label>Stripe Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>