force-app/main/default/objects/Stripe_FP_Audit__c/fields/Stripe_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice_Email__c</fullName>
    <label>Stripe Invoice Email</label>
    <type>Email</type>
</CustomField>